--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
-    "mongoose": "^8.0.0"
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2",
+    "node": "^21.2.0",
+    "nodemon": "^3.0.1"
   }
 }
